--- a/slides/class_13/class_13.html
+++ b/slides/class_13/class_13.html
@@ -640,7 +640,7 @@ Una posible solución: agregar un nivel adicional al loop (continentes)
 class: fullscreen, left, middle, text-black
 background-image: url("images/typewriter.jpg")
 
-.huge[#Una breve]
+.huge[#Breve]
 .huge[#intro]
 .huge[#ducción]
 .huge[#a purrr]
@@ -714,12 +714,12 @@ mydata %&gt;% head()
 ## # A tibble: 6 × 2
 ##        x      y
 ##    &lt;dbl&gt;  &lt;dbl&gt;
-## 1 -0.366  1.96 
-## 2  0.100 -2.08 
-## 3  1.34   0.818
-## 4  1.46  -2.21 
-## 5  1.16   0.870
-## 6 -0.245  0.190
+## 1 -1.08  -0.854
+## 2 -0.460  0.194
+## 3  0.829  1.64 
+## 4 -0.876  0.772
+## 5 -0.497  0.524
+## 6 -0.301 -0.589
 ```
 ]
 
@@ -740,10 +740,10 @@ sum_plus10 &lt;- function(x) {sum(x) + 10}
 
 ```
 ## $x
-## [1] 8.289258
+## [1] 3.80939
 ## 
 ## $y
-## [1] 14.24167
+## [1] 7.501408
 ```
 ]
 
@@ -768,14 +768,14 @@ mydata %&gt;% head()
 
 ```
 ## # A tibble: 6 × 2
-##          x      y
-##      &lt;dbl&gt;  &lt;dbl&gt;
-## 1  1.87    -0.678
-## 2  0.00708  0.182
-## 3  1.26     1.21 
-## 4 -0.966   -0.595
-## 5  1.01     0.334
-## 6 -0.673    0.337
+##         x        y
+##     &lt;dbl&gt;    &lt;dbl&gt;
+## 1 -0.118   2.09   
+## 2 -0.558   0.0106 
+## 3  0.181  -0.432  
+## 4 -1.15    1.06   
+## 5 -0.0980 -0.0874 
+## 6 -0.196  -0.00727
 ```
 ]
 
@@ -798,7 +798,7 @@ sum_plus10 &lt;- function(x) {sum(x) + 10}
 ## # A tibble: 1 × 2
 ##       x     y
 ##   &lt;dbl&gt; &lt;dbl&gt;
-## 1  13.8  12.1
+## 1  13.6  16.6
 ```
 ]
 
@@ -825,12 +825,12 @@ mydata %&gt;% head()
 ## # A tibble: 6 × 2
 ##         x      y
 ##     &lt;dbl&gt;  &lt;dbl&gt;
-## 1 -0.0300  1.58 
-## 2 -0.942   1.53 
-## 3 -0.511   0.907
-## 4 -0.927   1.08 
-## 5  1.18   -0.434
-## 6 -0.580  -0.493
+## 1 -0.275  -1.99 
+## 2 -0.724   0.500
+## 3 -0.727  -0.263
+## 4  0.0684 -0.219
+## 5  0.475  -0.402
+## 6  0.220  -0.799
 ```
 ]
 
@@ -851,7 +851,7 @@ mydata %&gt;% head()
 ## # A tibble: 1 × 2
 ##       x     y
 ##   &lt;dbl&gt; &lt;dbl&gt;
-## 1  3.29  13.0
+## 1  2.00  4.24
 ```
 ]
 
